--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -11,6 +11,9 @@
   background: var(--home-grid-bg);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   color: var(--ifm-color-emphasis-900);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media screen and (max-width: 996px) {
@@ -82,6 +85,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
 }
 
 .cloud {
